<?xml version="1.0"?>
<package>
  <name>roboteq_nxtgen_controller</name>
  <version>0.2.0</version>
  <description>ROS driver for the RoboteQ NxtGen motor controller family.</description>
  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/smd-ros-devel/roboteq_nxtgen_controller/issues</url>
  <url type="repository">https://github.com/smd-ros-devel/roboteq_nxtgen_controller</url>

  <author>Matt Richard</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
